Added the Canonical URL tag to the about me page on my website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Joseph Chambers</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="canonical" href="http://joseph.michael-chambers.com/about-me/" />
 </head>
 <body>
 
